data/derived/sp14/progs/unify/prog3371.ml.out
Characters 95-96:
  1::x
     ^
Error: This expression has type int list
       This is not a function; it cannot be applied.
